Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32239

QQuickImage's QSGTextureProvider does not emit the textureChanged() signal

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.3.0
    • 5.0.1
    • Quick: SceneGraph
    • None
    • Ubuntu 13.04
    • 9e345ab3c549851a273df62497f93ad9593385c9

    Description

      In qtdeclarative/src/quick/items/qquickimage.cpp around line 556 the m_texture variable of the QQuickImageTextureProvider (inheriting from QSGTextureProvider) is changed however the QSGTextureProvider::textureChanged signal is not emitted:

      [...]
      if (d->provider)

      { d->provider->m_smooth = d->smooth; d->provider->m_texture = texture; }

      [...]

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            kaleo Florian Boucault
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes