Emit textureChanged() when texture provider's texture change

Task-number: QTBUG-32239
Change-Id: I69c5892b1f0ee7934822183cdfeccdaa1ba1f542
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>